--- a/Landing-Page-Design.html
+++ b/Landing-Page-Design.html
@@ -95,8 +95,7 @@
                 <h3>Uranium Finance</h3>
               </div>
               <p>
-                Uranium Finance landing page shows the protocol, roadmap and
-                other information about a DeFi asset for the token holders.
+                Uranium Finance landing page shows the protocol, roadmap and other information of a DeFi asset for the token holders.
               </p>
               <div class="tag">
                 <p>Web</p>
@@ -118,9 +117,7 @@
                 <h3>Sun Medical</h3>
               </div>
               <p>
-                Sun Medical Center is a clinic based in Ha Noi. The website
-                offers appointment booking, contact and information about its
-                services and doctors.
+                Sun Medical Center is a clinic based in Ha Noi. The website offers appointment booking, contact and information about its services and doctors.
               </p>
               <div class="tag">
                 <p>Web</p>
