--- a/POMA.html
+++ b/POMA.html
@@ -66,9 +66,7 @@
           </div>
         </div>
         <p>
-          Poma is a smart building management application. Poma helps residents
-          to interact with each others and with the Building Management Board.
-          Residents can access to building‘s other services.
+          POMA is an apartment operation management application that solves the problem of optimizing the management process and communication between the Board of Directors, the Management Board and the Residents. POMA offers effective apartment management, communication system, announcements notification, monthly payment... Residents also can access to other services and utilities.
           <br /><br />
           <b>Role:</b> UI designer<br /><br />
           <b>Timeline:</b> 3 months<br /><br />
@@ -78,42 +76,27 @@
         <div class="row">
           <h3>Goals</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
-          </p>
-        </div>
-        <div class="row">
-          <h3>Conclusion</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            - Design an app with a large amount of textual content for different age groups. <br />
+            - Create design system with consistent UI elements and reusable components.<br />
+            - All residents will have a profile showing detailed information of their apartments.<br />
+            - The app contains features that allows users to pay monthly bills and send request on particular matters.
           </p>
         </div>
         <img src="./images/Poma/2.png" alt="Screens and Style" />
         <div class="row">
           <h3>Visual design</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            This app featured material design as the design system. The style was to give a friendly and trendy look, also keeping in mind the readability and clarity. The stylish icons were created with brand colors and their variants to elevate the mood of experience.
           </p>
         </div>
         <img src="./images/Poma/3.png" alt="Registration flow" />
         <div class="row">
           <div>
             <h4>User flow</h4>
-            <h3>Lorem ipsum</h3>
+            <h3>Register</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            For successful registration, the users have to enter a verification code, which can only be obtained from the Building Management Board.
           </p>
         </div>
         <img
@@ -124,65 +107,50 @@
         <div class="row">
           <div>
             <h4>User flow</h4>
-            <h3>Lorem ipsum</h3>
+            <h3>Announcement & News</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            Home screen consist 2 sections. The first section contains all the announcements from the Management Board. The second section displays informative news sourced from reputable sites.
           </p>
         </div>
         <img src="./images/Poma/6.png" alt="Request screens" />
         <div class="row">
           <div>
             <h4>User flow</h4>
-            <h3>Lorem ipsum</h3>
+            <h3>Requests</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            For solving problems within the building, the Residents and the Management Board can communicate to each others through request list screen. Each request item on a specific matter is labeled by status to helps the staffs manage and complete the tasks more conveniently.
           </p>
         </div>
         <img src="./images/Poma/7.png" alt="Bill screens" />
         <div class="row">
           <div>
             <h4>User flow</h4>
-            <h3>Lorem ipsum</h3>
+            <h3>Monthly Bills</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            The app allows users to make online payment for monthly bills. The invoices are displayed as a data list and separated into 2 tabs: unpaid and paid. Users can view invoice details and pay multiple bills at once.
           </p>
         </div>
         <img src="./images/Poma/8.png" alt="Utilities and Services" />
         <div class="row">
           <div>
             <h4>User flow</h4>
-            <h3>Lorem ipsum</h3>
+            <h3>Utilities & Services</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            Utilities & services screen displays the available services each building offers, visually represented by the flat illustrations.
           </p>
         </div>
         <img src="./images/Poma/9.png" alt="Other information" />
         <div class="row">
           <div>
             <h4>User flow</h4>
-            <h3>Lorem ipsum</h3>
+            <h3>User Account</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            The residents can update profile, apartment members, inform about visiting guests in order to help the Management Board in managing and security. Users can also access residents chat for convenient, smooth communication.
           </p>
         </div>
       </div>
