--- a/UI-UX-for-SaaS.html
+++ b/UI-UX-for-SaaS.html
@@ -101,9 +101,7 @@
                 <h3>Vietrip</h3>
               </div>
               <p>
-                Vietrip is a system of tour packages booking managements for
-                tourists as well as services provider. It also offers on-going
-                tour tracking and other services.
+                Vietrip is a system of tour packages booking managements for Tour operator as well as Tourists. It also offers on-going tour tracking and other services.
               </p>
               <div class="tag">
                 <p>Ios</p>
@@ -121,10 +119,7 @@
                 <h3>POMA</h3>
               </div>
               <p>
-                Poma is a smart building management application. Poma helps
-                residents to interact with each others and with the Building
-                Management Board. Residents can access to building‘s other
-                services.
+                POMA is an apartment operation management application that solves the problem of optimizing the management process and communication.
               </p>
               <div class="tag">
                 <p>Ios</p>
@@ -200,7 +195,7 @@
         <div class="footer_text">
           <h3>Duc Vuong</h3>
           <p>dominik4793@gmail.com</p>
-          <p>vuongduc47@gmail.com</p>
+          <p>vuongduc47@gmail.com (Vietnamese)</p>
         </div>
         <div class="footer_social">
           <a href="https://twitter.com/DV_fromtheEast" target="_blank"
