--- a/Vietrip.html
+++ b/Vietrip.html
@@ -66,9 +66,7 @@
           </div>
         </div>
         <p>
-          Vietrip is a system of tour packages booking managements for tourists
-          as well as services provider. It also offers on-going tour tracking
-          and other services.
+          Vietrip is a system of tour packages booking managements, which can be used by both tour operator and tourist. It also offers on-going tour tracking and other services.
           <br /><br />
           <b>Role:</b> UI/UX designer, Illustrator<br /><br />
           <b>Timeline:</b> 4 months<br /><br />
@@ -78,20 +76,13 @@
         <div class="row">
           <h3>Goals</h3>
           <p>
-            Make the tour booking experience easier and more enjoyable. Beside
-            that, this app also contains other features for Visa service, chat
-            room and process tracking. The interface should be easy to use and
-            well-organized with large amount of content.
+            Make the tour booking experience easier and  more enjoyable. Beside that, this app also contains other features for Visa service, chat room and process tracking. The interface should be easy to use and well-organized with large amount of content.
           </p>
         </div>
         <div class="row">
           <h3>Conclusion</h3>
           <p>
-            By searching and collecting information about client’s business and
-            trying other apps and website which have the similar business model.
-            My team has came up with ideas and solutions that can enhance the
-            product value. Next my team worked on wireframes before processing
-            with visual design.
+            By searching and collecting information about client’s business and trying other apps and website which have the similar business model. My team has came up with ideas and solutions that can enhance the product value. Next my team worked on wireframes before processing with visual design.
           </p>
         </div>
         <img src="./images/Vietrip/2.png" alt="Screens and Style" />
@@ -116,10 +107,7 @@
             <h3>On boarding/ Log In</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            The user flow hasn’t been designed only for the existing customers, tour guide and the admin, but also for the newcomers. To welcome users and excite them about the experience ahead, the onboarding screens which contains illustrations filled with brand colors were added.
           </p>
         </div>
         <img
@@ -132,10 +120,7 @@
             <h3>Tour booking</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            Home screen consists 2 tabs. The first tab - Tour Packages displays several travel pakages that might interest tourists. The packages has been categorized for customer needs and promotional purposes.
           </p>
         </div>
         <img src="./images/Vietrip/5.png" alt="Package detail" />
@@ -145,10 +130,7 @@
             <h3>Tour packages detail</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            Tour packages details screen provides all the information about the trip. Beside the photos which were uploaded by the tourists or the tour guide during the trip, it displays the price, duration, detailed information of the journey from departure to return, agreement and reviews.
           </p>
         </div>
         <img src="./images/Vietrip/6.png" alt="Articles" />
@@ -158,10 +140,7 @@
             <h3>Travel guide</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            The second tab - Travel guide shows a large amount of helpful information for travel: Tourism articles, visa, about local culture, food and tips for tourists in a specific place.
           </p>
         </div>
         <img src="./images/Vietrip/7.png" alt="View activity history" />
@@ -171,10 +150,7 @@
             <h3>Group chat</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            Admin, tour guide and customers can create chat groups. People in a tour can communicate with each others conveniently. It also helps tour guide better in controlling the trip.
           </p>
         </div>
         <img src="./images/Vietrip/8.png" alt="View activity history" />
@@ -184,10 +160,8 @@
             <h3>Account - Visa service</h3>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur. Vulputate magna placerat
-            urna ac mauris. Congue risus quis quam lectus urna placerat arcu
-            malesuada proin. Leo ac eu et ac mauris maecenas euismod massa
-            pellentesque.
+            Screen “Me” allows users to check their current and past activities, edit personal profile and other information of the service. <br>
+Screen “Visa” provides service of visa. It displays all the requirement for the submission and price in total.
           </p>
         </div>
       </div>
@@ -196,25 +170,6 @@
     <div class="dec">
       <img src="./images/DV_BG.svg" alt="DV BG" />
     </div>
-    <!-- footer -->
-    <!-- <footer>
-      <div class="footer">
-        <div class="footer_logo">
-          <img src="./images/Logo_DV_Footer.svg" alt="DV logo footer" />
-        </div>
-        <div class="footer_text">
-          <h3>Duc Vuong</h3>
-          <p>dominik4793@gmail.com</p>
-          <p>vuongduc47@gmail.com</p>
-        </div>
-        <div class="footer_social">
-          <a href="https://twitter.com/DV_fromtheEast" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-          <a href="https://discordapp.com/users/440616189656432661/" target="_blank"><i class="fa-brands fa-discord"></i></a>
-          <a href="https://t.me/DVfromtheeast" target="_blank"><i class="fa-brands fa-telegram"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        </div>
-      </div>
-    </footer> -->
     <script
       src="https://kit.fontawesome.com/3b84c2c88e.js"
       crossorigin="anonymous"
