--- a/aboutme.html
+++ b/aboutme.html
@@ -78,8 +78,8 @@
             Bachelor in Industrial and Product Design. Initially I have earned 5
             years experience in branding design, print design and illustration
             during working in agencies and start-ups. In early 2018, I had my
-            interest in designing Game Concept Art and Game User Interface when
-            i joined a mobile game studio. During that time i had opportunity to
+            interest in Game Concept Art and Game User Interface when
+            i joined a mobile game studio. During that time i had the opportunity to
             work on Mobile Management App projects and i constantly focused on
             UI/UX Research and UI Design. I have learned myself Material Design
             and Human Interface Guidelines. After that i switch completely to
