--- a/aboutme.html
+++ b/aboutme.html
@@ -112,7 +112,7 @@
         <div class="footer_text">
           <h3>Duc Vuong</h3>
           <p>dominik4793@gmail.com</p>
-          <p>vuongduc47@gmail.com</p>
+          <p>vuongduc47@gmail.com (Vietnamese)</p>
         </div>
         <div class="footer_social">
           <a href="https://twitter.com/DV_fromtheEast" target="_blank"
