--- a/aboutme.html
+++ b/aboutme.html
@@ -69,23 +69,22 @@
             <div class="profilepic_dec"></div>
           </div>
           <p>
-            Hello! My name is Duc Vuong or you can just call me <b>DV</b>.<br />
+            Hello! My name is Duc Vuong, or you can just call me <b>DV</b>.<br />
             I’m a freelance designer and illustrator from Vietnam. I enjoy
             creating design for digital products on every platform. Additionally
-            i also create website with HTML, CSS, JS or with other website
-            development services.<br /><br />
+            I also create website with HTML, CSS, JS or with CMS.<br /><br />
             I have graduated from Hanoi University of Industrial Fine Art with a
             Bachelor in Industrial and Product Design. Initially I have earned 5
             years experience in branding design, print design and illustration
             during working in agencies and start-ups. In early 2018, I had my
             interest in Game Concept Art and Game User Interface when
-            i joined a mobile game studio. During that time i had the opportunity to
-            work on Mobile Management App projects and i constantly focused on
+            I joined a mobile game studio. During that time I had the opportunity to
+            work on Mobile Management App projects and I constantly focused on
             UI/UX Research and UI Design. I have learned myself Material Design
-            and Human Interface Guidelines. After that i switch completely to
-            working on Applications because to me each Application has it own
+            and Human Interface Guidelines. After that I switch completely to
+            working on Applications because to me each Application has its own
             important role and can affect significantly to many aspects of human
-            ‘s life. When i worked with dev teams, I have learned HTML and CSS
+            ‘s life. When I worked with dev teams, I have learned HTML and CSS
             in order to understand how my design works when it ‘s in practice.
             Therefore I know how to make designing and coding works to be more
             productive together and less conflict.<br /><br />
