Install Google tag

--- a/Landing-Page-Design.html
+++ b/Landing-Page-Design.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M6MQFV5P96"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M6MQFV5P96');
+</script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -144,7 +152,7 @@
         <div class="footer_text">
           <h3>Duc Vuong</h3>
           <p>dominik4793@gmail.com</p>
-          <p>vuongduc47@gmail.com</p>
+          <p>vuongduc47@gmail.com (Vietnamese)</p>
         </div>
         <div class="footer_social">
           <a href="https://twitter.com/DV_fromtheEast" target="_blank"
