--- a/UI-UX-for-SaaS.html
+++ b/UI-UX-for-SaaS.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M6MQFV5P96"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-M6MQFV5P96"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-M6MQFV5P96');
-</script>
+      gtag("config", "G-M6MQFV5P96");
+    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -71,9 +76,8 @@
           <div class="tittle">
             <h2>UI/UX for SaaS</h2>
             <p>
-              User experience should always be a top priority. Consistent,
-              efficient and conscious UI and UX design is key factor for every
-              digital product’s success.
+              Consistent, efficient and conscious UI and UX design is key factor
+              for every digital product’s success.
             </p>
           </div>
         </div>
@@ -109,7 +113,9 @@
                 <h3>Vietrip</h3>
               </div>
               <p>
-                Vietrip is a system of tour packages booking managements for Tour operator as well as Tourists. It also offers on-going tour tracking and other services.
+                Vietrip is a system of tour packages booking managements for
+                Tour operator as well as Tourists. It also offers on-going tour
+                tracking and other services.
               </p>
               <div class="tag">
                 <p>Ios</p>
@@ -127,7 +133,9 @@
                 <h3>POMA</h3>
               </div>
               <p>
-                POMA is an apartment operation management application that solves the problem of optimizing the management process and communication.
+                POMA is an apartment operation management application that
+                solves the problem of optimizing the management process and
+                communication.
               </p>
               <div class="tag">
                 <p>Ios</p>
