--- a/aboutme.html
+++ b/aboutme.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M6MQFV5P96"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-M6MQFV5P96"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-  gtag('config', 'G-M6MQFV5P96');
-</script>
+      gtag('config', 'G-M6MQFV5P96');
+    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -77,31 +82,41 @@
             <div class="profilepic_dec"></div>
           </div>
           <p>
-            Hello! My name is Duc Vuong, or you can just call me <b>DV</b>.<br />
-            I’m a freelance designer and illustrator from Vietnam. I enjoy
-            creating design for digital products on every platform. Additionally
-            I also create website with HTML, CSS, JS or with CMS.<br /><br />
+            Hello! My name is Duc Vuong, or you can just call me
+            <b>DV</b>.<br /><br />
+            I’m a design generalist from Vietnam. I enjoy creating design for
+            brands, digital products and print matters. I also work with plain
+            HTML, CSS, JS or with CMS. Beside that, I also have experience in
+            creating web layout for dynamic websites by framework like Next.js
+            using library Material UI.<br /><br />
+
+            I can adapt quickly to new projects, seamlessly integrate with
+            coworkers, optimize work processes to solve problems effectively.<br /><br />
+
             I have graduated from Hanoi University of Industrial Fine Art with a
             Bachelor in Industrial and Product Design. Initially I have earned 5
             years experience in branding design, print design and illustration
             during working in agencies and start-ups. In early 2018, I had my
-            interest in Game Concept Art and Game User Interface when
-            I joined a mobile game studio. During that time I had the opportunity to
-            work on Mobile Management App projects and I constantly focused on
-            UI/UX Research and UI Design. I have learned myself Material Design
-            and Human Interface Guidelines. After that I switch completely to
-            working on Applications because to me each Application has its own
-            important role and can affect significantly to many aspects of human
-            ‘s life. When I worked with dev teams, I have learned HTML and CSS
-            in order to understand how my design works when it ‘s in practice.
-            Therefore I know how to make designing and coding works to be more
-            productive together and less conflict.<br /><br />
-            Today, my main focus is designing accessible digital products &
-            services for clients.<br /><br />
+            interest in Game Concept Art and Game User Interface when I joined a
+            mobile game studio. During that time I had the opportunity to work
+            on Mobile Management App projects. I constantly focused on UI/UX
+            Research and UI Design and I had learned myself Material Design and
+            Human Interface Guidelines. After that I switch completely to
+            working on designing UI/UX in a SAAS product company. To me, each
+            product has its own important role and can affect significantly to a
+            specific aspect of human ‘s life.<br /><br />
+            I have learned HTML and CSS in order to have deeper understanding of
+            the front-end development process, I can view the problems from
+            different vantage points. Therefore I know how to make designing and
+            coding works to be more efficient together and have less conflict.
+            <br /><br />
+
+            Today, my main focus is helping clients in making brands, website
+            and other digital products & services.<br /><br />
+
             If you have a project you want to discuss, feel free to
-            <a href="./contact"> <b> Get In Touch </b></a>
-            with me and we can find the best way to help you to take your
-            project forward.
+            <a href="./contact"> <b> Get In Touch </b></a> with me and we can
+            find the best way to help you to take your project forward.
           </p>
         </div>
       </div>
