--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M6MQFV5P96"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-M6MQFV5P96"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-  gtag('config', 'G-M6MQFV5P96');
-</script>
+      gtag('config', 'G-M6MQFV5P96');
+    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -77,8 +82,8 @@
         <div class="banner_text">
           <h1>I create visual for your product</h1>
           <p>
-            Hello, My name is Duc Vuong (DV). I am design generalist from
-            Vietnam.
+            As an independent designer, I love to make innovative and meaningful
+            things.
           </p>
           <a href="/works"><button>Check out my works</button></a>
         </div>
