add button view details

--- a/Landing-Page-Design.html
+++ b/Landing-Page-Design.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M6MQFV5P96"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-M6MQFV5P96"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-  gtag('config', 'G-M6MQFV5P96');
-</script>
+      gtag('config', 'G-M6MQFV5P96');
+    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -91,6 +96,9 @@
                 <p>Web</p>
                 <p>Desktop & Mobile</p>
               </div>
+              <button class="b--outlined" onclick="location.href='/LP-Mmenu'">
+                View details
+              </button>
             </div>
             <div class="card_img">
               <img src="./images/LP_MMENU.png" />
@@ -103,12 +111,16 @@
                 <h3>Uranium Finance</h3>
               </div>
               <p>
-                Uranium Finance landing page shows the protocol, roadmap and other information of a DeFi asset for the token holders.
+                Uranium Finance landing page shows the protocol, roadmap and
+                other information of a DeFi asset for the token holders.
               </p>
               <div class="tag">
                 <p>Web</p>
                 <p>Desktop & Mobile</p>
               </div>
+              <button class="b--outlined" onclick="location.href='/LP-Uranium'">
+                View details
+              </button>
             </div>
             <div class="card_img">
               <img src="./images/LP_Uranium.png" />
@@ -125,12 +137,20 @@
                 <h3>Sun Medical</h3>
               </div>
               <p>
-                Sun Medical Center is a clinic based in Ha Noi. The website offers appointment booking, contact and information about its services and doctors.
+                Sun Medical Center is a clinic based in Ha Noi. The website
+                offers appointment booking, contact and information about its
+                services and doctors.
               </p>
               <div class="tag">
                 <p>Web</p>
                 <p>Desktop</p>
               </div>
+              <button
+                class="b--outlined"
+                onclick="location.href='/LP-Sun-Medical-Center'"
+              >
+                View details
+              </button>
             </div>
             <div class="card_img">
               <img src="./images/LP_Sun Medical Center.png" />
