--- a/UI-UX-for-SaaS.html
+++ b/UI-UX-for-SaaS.html
@@ -10,9 +10,9 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
+      gtag('js', new Date());
 
-      gtag("config", "G-M6MQFV5P96");
+      gtag('config', 'G-M6MQFV5P96');
     </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -101,6 +101,12 @@
                 <p>Web</p>
                 <p>Mobile</p>
               </div>
+              <button
+                class="b--outlined"
+                onclick="location.href='/Mmenu-for-End-User'"
+              >
+                View details
+              </button>
             </div>
             <div class="card_img">
               <img src="./images/MMENU_for_End_User.png" />
@@ -121,6 +127,9 @@
                 <p>Ios</p>
                 <p>Android</p>
               </div>
+              <button class="b--outlined" onclick="location.href='/Vietrip'">
+                View details
+              </button>
             </div>
             <div class="card_img">
               <img src="./images/Vietrip.png" />
@@ -141,6 +150,9 @@
                 <p>Ios</p>
                 <p>Android</p>
               </div>
+              <button class="b--outlined" onclick="location.href='/POMA'">
+                View details
+              </button>
             </div>
             <div class="card_img">
               <img src="./images/POMA.png" />
@@ -165,6 +177,12 @@
                 <p>Android</p>
                 <p>Web</p>
               </div>
+              <button
+                class="b--outlined"
+                onclick="location.href='/Mmenu-for-Admin'"
+              >
+                View details
+              </button>
             </div>
             <div class="card_img">
               <img src="./images/MMENU_for_Admin.png" />
@@ -190,6 +208,12 @@
                 <p>Android</p>
                 <p>Web</p>
               </div>
+              <button
+                class="b--outlined"
+                onclick="location.href='/Mmenu-Inventory'"
+              >
+                View details
+              </button>
             </div>
             <div class="card_img">
               <img src="./images/MMENU_Inventory.png" />
