--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
                 rows="6"
                 placeholder=" Message..."
               ></textarea>
-              <button type="submit">Send</button>
+              <button class="b" type="submit">Send</button>
             </form>
           </div>
           <div class="other_addresses">
