--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
             As an independent designer, I love to make innovative and meaningful
             things.
           </p>
-          <a href="/works"><button>Check out my works</button></a>
+          <button class="b" onclick="location.href='/works'">
+            Check out my works
+          </button>
         </div>
       </div>
     </div>
