--- a/UI-UX-for-SaaS.html
+++ b/UI-UX-for-SaaS.html
@@ -47,7 +47,7 @@
           <!-- links -->
           <ul class="navbar_links">
             <li class="link"><a href="./aboutme">About me</a></li>
-            <li class="link_selected"><a href="./works">Works</a></li>
+            <li class="link"><a href="./works">Works</a></li>
             <li class="link"><a href="./skills">Skills</a></li>
             <li class="link"><a href="./contact">Contact</a></li>
           </ul>
