--- a/index.html
+++ b/index.html
@@ -71,13 +71,20 @@
     <!-- banner -->
     <div class="container">
       <div class="banner">
-        <div class="banner_img">
-          <img
-            class="illustration"
-            id="illustration"
-            src="./images/night.png"
-            alt="illustration"
-          />
+        <div class="illustration">
+          <img class="moon" src="./images/Banner/moon.png" />
+          <img class="sun" src="./images/Banner/sun.png" />
+          <img class="cloud1" src="./images/Banner/cloud1.png" />
+          <img class="cloud2" src="./images/Banner/cloud2.png" />
+          <img class="cloud3" src="./images/Banner/cloud3.png" />
+          <img class="balloon" src="./images/Banner/hotairballoon.png" />
+          <div class="platform">
+            <img class="layer4" id="layer4" src="./images/Banner/night4.png" />
+            <img class="layer3" id="layer3" src="./images/Banner/night3.png" />
+            <img class="layer2" id="layer2" src="./images/Banner/night2.png" />
+            <img class="layer1" id="layer1" src="./images/Banner/night1.png" />
+            <img class="layer" id="layer" src="./images/Banner/night.png" />
+          </div>
         </div>
         <div class="banner_text">
           <h1>I create visual for your product</h1>
@@ -139,5 +146,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/home.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
   </body>
 </html>
