--- a/aboutme.html
+++ b/aboutme.html
@@ -84,14 +84,14 @@
           <p>
             Hello! My name is Duc Vuong, or you can just call me
             <b>DV</b>.<br /><br />
-            I’m a design generalist from Vietnam. I enjoy creating design for
-            brands, digital products and print matters. I also work with plain
-            HTML, CSS, JS or with CMS. Beside that, I also have experience in
-            creating web layout for dynamic websites by framework like Next.js
-            using library Material UI.<br /><br />
+            I’m a design generalist from Vietnam. I enjoy designing for brands,
+            digital products and print matters. I also work with plain HTML,
+            CSS, JS or with CMS. Beside that, I have experience in creating web
+            layout for dynamic websites by framework like Next.js using library
+            Material UI.<br /><br />
 
-            I can adapt quickly to new projects, seamlessly integrate with
-            coworkers, optimize work processes to solve problems effectively.<br /><br />
+            I can quickly adapt to new projects and integrate with coworkers,
+            optimize work processes to solve problems effectively.<br /><br />
 
             I have graduated from Hanoi University of Industrial Fine Art with a
             Bachelor in Industrial and Product Design. Initially I have earned 5
