--- a/aboutme.html
+++ b/aboutme.html
@@ -85,10 +85,9 @@
             Hello! My name is Duc Vuong, or you can just call me
             <b>DV</b>.<br /><br />
             I’m a design generalist from Vietnam. I enjoy designing for brands,
-            digital products and print matters. I also work with plain HTML,
-            CSS, JS or with CMS. Beside that, I have experience in creating web
-            layout for dynamic websites by framework like Next.js using library
-            Material UI.<br /><br />
+            digital products and printing. I also work with plain HTML, CSS, JS
+            or with CMS. Beside that, I have experience in creating web layout
+            for dynamic websites using library Material UI.<br /><br />
 
             I can quickly adapt to new projects and integrate with coworkers,
             optimize work processes to solve problems effectively.<br /><br />
