--- a/aboutme.html
+++ b/aboutme.html
@@ -86,7 +86,7 @@
             <b>DV</b>.<br /><br />
             I’m a design generalist from Vietnam. I enjoy designing for brands,
             digital products and printing. I also work with plain HTML, CSS, JS
-            or with CMS. Beside that, I have experience in creating web layout
+            or with CMS. Besides that, I have experience in creating web layout
             for dynamic websites using library Material UI.<br /><br />
 
             I can quickly adapt to new projects and integrate with coworkers,
